Update Van Meter United Methodist Church.html

--- a/Van Meter United Methodist Church.html
+++ b/Van Meter United Methodist Church.html
@@ -65,16 +65,12 @@
       }
 
      
-      @media only screen and (hover: hover) and (pointer: fine){
+      @media only screen and (hover: hover) and (pointer: fine) and (min-width: 992px){
         .dropdown:hover .dropdown-menu {
         display: block;
       }
-      body{background-color: green;}
       }
 
-      @media only screen and (hover: hover) and (pointer: fine){
-        body{background-color: red;}
-      }
      
 
  
