Update Van Meter United Methodist Church.html

--- a/Van Meter United Methodist Church.html
+++ b/Van Meter United Methodist Church.html
@@ -70,7 +70,11 @@
         display: block;
       }
       }
-
+      @media only screen and (max-width: 992px){
+      .collapse {
+        margin-left: 10px;
+      }
+    }
      
 
  
@@ -138,7 +142,7 @@
       <div id="main">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow">
           <!-- <a class="navbar-brand" href="#">Navbar</a> -->
-          <button
+          <button style="margin-left: 10px;"
             class="navbar-toggler"
             type="button"
             data-bs-toggle="collapse"
