--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
               >
             </p>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 my-auto">
             <h1 align="center">Welcome!</h1>
             <p align="center">
               <b
@@ -336,7 +336,7 @@
               <a href="mailto:office@vmumc.com">office@vmumc.com</a>
             </p>
           </div>
-          <div class="col-lg-4 text-center">
+          <div class="col-lg-4 text-center my-auto">
             <iframe
               src="//www.google.com/calendar/embed?mode=AGENDA&height=300&wkst=1&bgcolor=%23cccccc&src=9k15r4oj9pihte8nr4s3ra7qag%40group.calendar.google.com&color=%23BE6D00&src=a8so3okd24r3jbjr546tastrg0%40group.calendar.google.com&color=%234A716C&src=5cm43rq8vd82m98u7odb5jjmas%40group.calendar.google.com&color=%23A32929&src=en.usa%23holiday%40group.v.calendar.google.com&color=%232952A3&ctz=America%2FChicago"
               style="border-width: 0"
