--- a/navbar.html
+++ b/navbar.html
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav mx-auto mt-2 mt-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="/index.html"> Home </a>
+              <a class="nav-link" href="/home.html"> Home </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/kidscare"> Kidscare </a>
