added footer to kidscare

--- a/kidsCare.html
+++ b/kidsCare.html
@@ -354,6 +354,10 @@
           </div>
         </div>
       </div>
-      <footer id="footer"></footer>
+      <div id="container">
+        <footer class="p-t-50">
+          <p>© 2024 - Van Meter United Methodist Church. All rights reserved.</p>
+        </footer>
+      </div>
 </body>
 </html>
