Added Contact Pages

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   <body>
     <div class="home">
       <div id="container" class="px-3">
-        <div class="row p-t-50 mx-auto">
+        <div class="row pt-5 mx-auto">
           <div class="col-lg-6">
             <p>
               The <strong>Adult Discussion Group</strong> meets each Sunday
@@ -639,7 +639,7 @@
       </div>
     </div>
     <div id="container">
-      <footer class="p-t-50">
+      <footer class="pt-5">
         <p>© 2024 - Van Meter United Methodist Church. All rights reserved.</p>
       </footer>
     </div>
