--- a/kidsCare.html
+++ b/kidsCare.html
@@ -130,7 +130,7 @@
 </div>
 <!-- End Navbar -->
     <div id="container">
-        <div class="row p-t-50 mx-auto">
+        <div class="row pt-5 mx-auto">
           <div class="row mx-auto">
             <h1>Welcome to Van Meter United Methodist Kids Care</h1>
           </div>
@@ -354,10 +354,12 @@
           </div>
         </div>
       </div>
+      <!-- Start Footer -->
       <div id="container">
-        <footer class="p-t-50">
+        <footer class="pt-5">
           <p>© 2024 - Van Meter United Methodist Church. All rights reserved.</p>
         </footer>
       </div>
+      <!-- End Footer -->
 </body>
 </html>
