--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <!-- Banner -->
-    <div id="container" class="m-t-10">
+    <div id="container" class="mt-3">
       <img
         src="./images/websitebanner.jpg"
         style="width: 100%; border: none; text-indent: -5000px"
@@ -163,9 +163,21 @@
       </div>
     </div>
     <!-- Start Footer -->
-    <div id="container">
+    <div id="container" class="mb-3">
       <footer class="pt-5">
-        <p>© 2024 - Van Meter United Methodist Church. All rights reserved.</p>
+        <div class="row mx-auto bg-dark shadow text-white">
+          <div class="col-lg-11 mt-2">
+            <p>
+              <img height="35" width="35" src="./images/white+umc+logo.png" /> ©
+              2024 - Van Meter United Methodist Church. All rights reserved.
+            </p>
+          </div>
+          <div class="col-lg-1 mt-2 mb-2 text-center">
+            <a href="https://www.facebook.com/profile.php?id=100064317144537"
+              ><img height="35" width="35" src="./images/facebook.png"
+            /></a>
+          </div>
+        </div>
       </footer>
     </div>
     <!-- End Footer -->
