--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>Van Meter United Methodist Church</title>
   </head>
   <!-- Banner -->
-  <div id="container" class="m-t-10">
+  <div id="container" class="mt-3">
     <img
       src="./images/websitebanner.jpg"
       style="width: 100%; border: none; text-indent: -5000px"
@@ -168,7 +168,7 @@
           </div>
         </div>
 
-        <div class="row m-t-20 mx-auto">
+        <div class="row mt-4 mx-auto">
           <div class="col-lg-4">
             <div class="row text-center">
               <div class="col-lg 2">
@@ -250,7 +250,7 @@
         </div>
         <div id="welcomeschedule">
           <div id="welcomeschedule2">
-            <div class="row mx-auto">
+            <div class="row mx-auto fs-5 mt-4">
               <div class="col-lg-8">
                 <div class="row">
                   <div class="col-lg-6">
@@ -638,10 +638,24 @@
         </div>
       </div>
     </div>
-    <div id="container">
+    <!-- Start Footer -->
+    <div id="container" class="mb-3">
       <footer class="pt-5">
-        <p>© 2024 - Van Meter United Methodist Church. All rights reserved.</p>
+        <div class="row mx-auto bg-dark shadow text-white">
+          <div class="col-lg-11 mt-2">
+            <p>
+              <img height="35" width="35" src="./images/white+umc+logo.png" /> ©
+              2024 - Van Meter United Methodist Church. All rights reserved.
+            </p>
+          </div>
+          <div class="col-lg-1 mt-2 mb-2 text-center">
+            <a href="https://www.facebook.com/profile.php?id=100064317144537"
+              ><img height="35" width="35" src="./images/facebook.png"
+            /></a>
+          </div>
+        </div>
       </footer>
     </div>
+    <!-- End Footer -->
   </body>
 </html>
