--- a/information-request.html
+++ b/information-request.html
@@ -206,9 +206,7 @@
             name="field-469dd9a5020b020"
             style="height: 150px"
           ></textarea>
-          <label for="field-469dd9a5020b020"
-            >What would you like more information about</label
-          >
+          <label for="field-469dd9a5020b020">Information You Need</label>
         </div>
 
         <button class="btn btn-primary w-100" type="submit">Submit form</button>
