Added Images Page

--- a/building-request.html
+++ b/building-request.html
@@ -235,7 +235,7 @@
           <label for="field-c771266992e254f">Reason For Use</label>
         </div>
 
-        <label>What Rooms Will Be Needed</label>
+        <label class="form-label">What Rooms Will Be Needed</label>
         <div class="form-check form-switch">
           <input
             class="form-check-input"
