--- a/building-request.html
+++ b/building-request.html
@@ -151,177 +151,196 @@
     <!-- End Navbar -->
 
     <div id="container" class="px-3">
-      <div class="row mx-auto pt-5">
-        <h2 class="text-center">Building Use Request Form</h2>
-      </div>
-
-      <hr />
-      <form
-        enctype="multipart/form-data"
-        method="post"
-        action="http://www.response-o-matic.com/mail.php"
-        accept-charset="UTF-8"
-        onsubmit="formatDate()"
+      <div
+        class="modal modal-sheet position-static d-block p-4 py-md-5"
+        tabindex="-1"
+        role="dialog"
+        id="modalSignin"
       >
-        <div>
-          <input
-            type="hidden"
-            name="acctid"
-            id="acctid"
-            value="u7p9qzi9dh3ql0yy"
-          />
-          <input type="hidden" name="formid" id="formid" value="786297" />
-          <input
-            type="hidden"
-            name="required_vars"
-            id="required_vars"
-            value="name,field-792704759794cbb,field-c5b0d72b8c09b1c,field-c771266992e254f,field-038e996398a85f1"
-          />
-        </div>
-        <div class="form-floating mb-3">
-          <input
-            type="text"
-            class="form-control"
-            id="name"
-            placeholder="Name"
-          />
-          <label for="name">Name</label>
-        </div>
-        <div class="form-floating mb-3">
-          <input
-            type="text"
-            class="form-control"
-            id="field-792704759794cbb"
-            placeholder="Phone Number"
-            name="field-792704759794cbb"
-          />
-          <label for="field-792704759794cbb">Phone Number</label>
-        </div>
-        <div class="form-floating mb-3">
-          <input
-            type="text"
-            class="form-control"
-            id="email"
-            placeholder="Email Address"
-            name="email"
-          />
-          <label for="email">Email Address</label>
-        </div>
-        <div class="form-floating mb-3">
-          <input
-            required
-            type="date"
-            name="date"
-            id="date"
-            size="20"
-            class="form-control"
-          />
-          <input
-            required
-            type="hidden"
-            name="field-c5b0d72b8c09b1c"
-            id="field-c5b0d72b8c09b1c"
-          />
-          <label for="date">Date Building Is Needed</label>
-        </div>
-        <div class="form-floating mb-3">
-          <textarea
-            class="form-control"
-            placeholder="Reason For Use"
-            id="field-c771266992e254f"
-            name="field-c771266992e254f"
-            style="height: 150px"
-          ></textarea>
-          <label for="field-c771266992e254f">Reason For Use</label>
-        </div>
+        <div class="modal-dialog-centered" role="document">
+          <div class="modal-content rounded-4 shadow">
+            <div class="modal-header p-5 pb-4 border-bottom-0">
+              <h1 class="fw-bold mb-0 fs-2">Building Use Request Form</h1>
+            </div>
 
-        <label class="form-label">What Rooms Will Be Needed</label>
-        <div class="form-check form-switch">
-          <input
-            class="form-check-input"
-            type="checkbox"
-            role="switch"
-            name="field-038e996398a85f1[]"
-            id="field-038e996398a85f1_0"
-            value="Fellowship Hall"
-          />
-          <label class="form-check-label" for="field-038e996398a85f1_0"
-            >Fellowship Hall</label
-          >
-        </div>
-        <div class="form-check form-switch">
-          <input
-            class="form-check-input"
-            type="checkbox"
-            role="switch"
-            name="field-038e996398a85f1[]"
-            id="field-038e996398a85f1_1"
-            value="Bathrooms"
-          />
-          <label class="form-check-label" for="field-038e996398a85f1_1"
-            >Bathrooms</label
-          >
-        </div>
-        <div class="form-check form-switch">
-          <input
-            class="form-check-input"
-            type="checkbox"
-            role="switch"
-            name="field-038e996398a85f1[]"
-            id="field-038e996398a85f1_2"
-            value="Kitchen"
-          />
-          <label class="form-check-label" for="field-038e996398a85f1_2"
-            >Kitchen</label
-          >
-        </div>
-        <div class="form-check form-switch">
-          <input
-            class="form-check-input"
-            type="checkbox"
-            role="switch"
-            name="field-038e996398a85f1[]"
-            id="field-038e996398a85f1_3"
-            value="Sanctuary"
-          />
-          <label class="form-check-label" for="field-038e996398a85f1_3"
-            >Sanctuary</label
-          >
-        </div>
-        <div class="form-check form-switch">
-          <input
-            class="form-check-input"
-            type="checkbox"
-            role="switch"
-            name="field-038e996398a85f1[]"
-            id="field-038e996398a85f1_4"
-            value="Sanctuary Overflow"
-          />
-          <label class="form-check-label" for="field-038e996398a85f1_4"
-            >Sanctuary Overflow</label
-          >
-        </div>
-        <div class="form-check form-switch mb-3">
-          <input
-            class="form-check-input"
-            type="checkbox"
-            role="switch"
-            name="field-038e996398a85f1[]"
-            id="field-038e996398a85f1_5"
-            value="Class Rooms"
-          />
-          <label class="form-check-label" for="field-038e996398a85f1_5"
-            >Class Rooms</label
-          >
-        </div>
+            <div class="modal-body p-5 pt-0">
+              <form
+                enctype="multipart/form-data"
+                method="post"
+                action="http://www.response-o-matic.com/mail.php"
+                accept-charset="UTF-8"
+                onsubmit="formatDate()"
+              >
+                <div>
+                  <input
+                    type="hidden"
+                    name="acctid"
+                    id="acctid"
+                    value="u7p9qzi9dh3ql0yy"
+                  />
+                  <input
+                    type="hidden"
+                    name="formid"
+                    id="formid"
+                    value="786297"
+                  />
+                  <input
+                    type="hidden"
+                    name="required_vars"
+                    id="required_vars"
+                    value="name,field-792704759794cbb,field-c5b0d72b8c09b1c,field-c771266992e254f,field-038e996398a85f1"
+                  />
+                </div>
+                <div class="form-floating mb-3">
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="name"
+                    placeholder="Name"
+                  />
+                  <label for="name">Name</label>
+                </div>
+                <div class="form-floating mb-3">
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="field-792704759794cbb"
+                    placeholder="Phone Number"
+                    name="field-792704759794cbb"
+                  />
+                  <label for="field-792704759794cbb">Phone Number</label>
+                </div>
+                <div class="form-floating mb-3">
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="email"
+                    placeholder="Email Address"
+                    name="email"
+                  />
+                  <label for="email">Email Address</label>
+                </div>
+                <div class="form-floating mb-3">
+                  <input
+                    required
+                    type="date"
+                    name="date"
+                    id="date"
+                    size="20"
+                    class="form-control"
+                  />
+                  <input
+                    required
+                    type="hidden"
+                    name="field-c5b0d72b8c09b1c"
+                    id="field-c5b0d72b8c09b1c"
+                  />
+                  <label for="date">Date Building Is Needed</label>
+                </div>
+                <div class="form-floating mb-3">
+                  <textarea
+                    class="form-control"
+                    placeholder="Reason For Use"
+                    id="field-c771266992e254f"
+                    name="field-c771266992e254f"
+                    style="height: 150px"
+                  ></textarea>
+                  <label for="field-c771266992e254f">Reason For Use</label>
+                </div>
 
-        <button class="btn btn-primary w-100" type="submit">Submit form</button>
-      </form>
+                <label class="form-label">What Rooms Will Be Needed</label>
+                <div class="form-check form-switch">
+                  <input
+                    class="form-check-input"
+                    type="checkbox"
+                    role="switch"
+                    name="field-038e996398a85f1[]"
+                    id="field-038e996398a85f1_0"
+                    value="Fellowship Hall"
+                  />
+                  <label class="form-check-label" for="field-038e996398a85f1_0"
+                    >Fellowship Hall</label
+                  >
+                </div>
+                <div class="form-check form-switch">
+                  <input
+                    class="form-check-input"
+                    type="checkbox"
+                    role="switch"
+                    name="field-038e996398a85f1[]"
+                    id="field-038e996398a85f1_1"
+                    value="Bathrooms"
+                  />
+                  <label class="form-check-label" for="field-038e996398a85f1_1"
+                    >Bathrooms</label
+                  >
+                </div>
+                <div class="form-check form-switch">
+                  <input
+                    class="form-check-input"
+                    type="checkbox"
+                    role="switch"
+                    name="field-038e996398a85f1[]"
+                    id="field-038e996398a85f1_2"
+                    value="Kitchen"
+                  />
+                  <label class="form-check-label" for="field-038e996398a85f1_2"
+                    >Kitchen</label
+                  >
+                </div>
+                <div class="form-check form-switch">
+                  <input
+                    class="form-check-input"
+                    type="checkbox"
+                    role="switch"
+                    name="field-038e996398a85f1[]"
+                    id="field-038e996398a85f1_3"
+                    value="Sanctuary"
+                  />
+                  <label class="form-check-label" for="field-038e996398a85f1_3"
+                    >Sanctuary</label
+                  >
+                </div>
+                <div class="form-check form-switch">
+                  <input
+                    class="form-check-input"
+                    type="checkbox"
+                    role="switch"
+                    name="field-038e996398a85f1[]"
+                    id="field-038e996398a85f1_4"
+                    value="Sanctuary Overflow"
+                  />
+                  <label class="form-check-label" for="field-038e996398a85f1_4"
+                    >Sanctuary Overflow</label
+                  >
+                </div>
+                <div class="form-check form-switch mb-3">
+                  <input
+                    class="form-check-input"
+                    type="checkbox"
+                    role="switch"
+                    name="field-038e996398a85f1[]"
+                    id="field-038e996398a85f1_5"
+                    value="Class Rooms"
+                  />
+                  <label class="form-check-label" for="field-038e996398a85f1_5"
+                    >Class Rooms</label
+                  >
+                </div>
+
+                <button class="btn btn-primary w-100" type="submit">
+                  Submit form
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- Start Footer -->
     <div id="container" class="mb-3">
-      <footer class="pt-5">
+      <footer>
         <div class="row mx-auto bg-dark shadow text-white">
           <div class="col-lg-11 mt-2">
             <p>
