--- a/publications.html
+++ b/publications.html
@@ -133,7 +133,11 @@
     <!-- End Navbar -->
 
     <div id="container" class="px-3">
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 pt-5 mx-auto justify-content-center">
+        <div class="row mx-auto text-center pt-5">
+            <h2>Church Publications</h2>
+            <hr/>
+        </div>
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 mx-auto justify-content-center">
         <div class="col">
           <div class="card shadow-sm bg-dark text-white">
             <img
