Added Ministries Page

--- a/calendar.html
+++ b/calendar.html
@@ -18,11 +18,8 @@
   </head>
   <body>
     <!-- Banner -->
-    <div id="container" class="mt-3">
-      <img
-        src="./images/websitebanner.jpg"
-        style="width: 100%; border: none; text-indent: -5000px"
-      />
+    <div id="container" class="mt-3 rounded-top-5">
+      <img class="w-100 rounded-top-5" src="./images/websitebanner.jpg" />
     </div>
     <!-- End Banner -->
     <!-- Navbar -->
@@ -148,19 +145,22 @@
       </div>
     </div>
     <!-- Start Footer -->
-    <div id="container" class="mb-3">
+    <div id="container" class="mb-3 rounded-bottom-5">
       <footer class="pt-5">
-        <div class="row mx-auto bg-dark shadow text-white">
-          <div class="col-lg-11 mt-2">
+        <div class="row mx-auto bg-dark shadow text-white rounded-bottom-5">
+          <div class="col-lg-10 mt-2 align-self-center">
             <p>
-              <img height="35" width="35" src="./images/white+umc+logo.png" /> ©
+              <img height="60" width="60" src="./images/white+umc+logo.png" /> ©
               2024 - Van Meter United Methodist Church. All rights reserved.
             </p>
           </div>
-          <div class="col-lg-1 mt-2 mb-2 text-center">
-            <a href="https://www.facebook.com/profile.php?id=100064317144537"
-              ><img height="35" width="35" src="./images/facebook.png"
-            /></a>
+          <div class="col-lg-2 mt-2 mb-2 text-center align-self-center">
+            <p>
+              Stay Connected
+              <a href="https://www.facebook.com/profile.php?id=100064317144537"
+                ><img height="35" width="35" src="./images/facebook.png"
+              /></a>
+            </p>
           </div>
         </div>
       </footer>
