Removed accidentally added font size class

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         </div>
         <div id="welcomeschedule">
           <div id="welcomeschedule2">
-            <div class="row mx-auto fs-5 mt-4">
+            <div class="row mx-auto mt-4">
               <div class="col-lg-8">
                 <div class="row">
                   <div class="col-lg-6">
